--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
-    "mysql2": "^3.2.4"
+    "mysql2": "^3.2.4",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
